--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,7 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   line-height: 5px;
-  letter-spacing: .75px;
+  letter-spacing: 0.75px;
   min-width: 96px;
   padding-right: 10rem;
   font-size: 1.2rem;
@@ -84,9 +84,9 @@ body {
   color: #615f5fcf;
   font-family: monospace;
   font-weight: lighter;
-  transition: .3s;
-  -webkit-transition: .3s;
-  -moz-transition: .3s;
-  -ms-transition: .3s;
-  -o-transition: .3s;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
 }
